clean up product structure