@@ -1,6 +1,8 @@
 package com.ortoroverbasso.ortorovebasso.service.product.product_large_quantity_price.impl;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
@@ -20,86 +22,89 @@ import com.ortoroverbasso.ortorovebasso.service.product.product_large_quantity_p
 import jakarta.validation.Valid;
 
 @Service
+@Validated
 public class ProductLargeQuantityPriceServiceImpl implements IProductLargeQuantityPriceService {
 
     private final IProductService productService;
     private final ProductLargeQuantityPriceRepository priceLargeQuantityRepository;
+    private final ProductMapper productMapper;
+    private final ProductLargeQuantityPriceMapper productLargeQuantityPriceMapper;
 
     public ProductLargeQuantityPriceServiceImpl(
             ProductLargeQuantityPriceRepository priceLargeQuantityRepository,
-            IProductService productService) {
-        this.productService = productService;
+            IProductService productService,
+            ProductMapper productMapper,
+            ProductLargeQuantityPriceMapper productLargeQuantityPriceMapper) {
         this.priceLargeQuantityRepository = priceLargeQuantityRepository;
+        this.productService = productService;
+        this.productMapper = productMapper;
+        this.productLargeQuantityPriceMapper = productLargeQuantityPriceMapper;
     }
 
-    @Validated
     @Override
     public ProductLargeQuantityPriceResponseDto createProductPriceLargeQuantity(
             Long productId,
-            @Valid ProductLargeQuantityPriceRequestDto priceLargeQuantityRequestDto) {
+            @Valid ProductLargeQuantityPriceRequestDto requestDto) {
 
-        ProductResponseDto product = productService.getProductById(productId);
-
-        if (product == null) {
+        ProductResponseDto productDto = productService.getProductById(productId);
+        if (productDto == null) {
             throw new ProductNotFoundException(productId);
         }
 
-        ProductEntity p = ProductMapper.fromResponseToEntity(product);
+        ProductEntity product = productMapper.fromResponseToEntity(productDto);
+        ProductLargeQuantityPriceEntity entity = productLargeQuantityPriceMapper.toEntity(requestDto);
+        entity.setProduct(product);
 
-        ProductLargeQuantityPriceEntity priceLargeQuantityEntity = ProductLargeQuantityPriceMapper
-                .toEntity(priceLargeQuantityRequestDto);
+        ProductLargeQuantityPriceEntity saved = priceLargeQuantityRepository.save(entity);
 
-        priceLargeQuantityEntity.setProduct(p);
-
-        ProductLargeQuantityPriceEntity savedPrice = priceLargeQuantityRepository.save(priceLargeQuantityEntity);
-
-        return ProductLargeQuantityPriceMapper.toResponseDto(savedPrice);
+        return productLargeQuantityPriceMapper.toResponseDto(saved);
     }
 
     @Override
     public List<ProductLargeQuantityPriceResponseDto> getProductLargeQuantityPriceByProductId(Long productId) {
-        ProductResponseDto product = productService.getProductById(productId);
-        ProductEntity p = ProductMapper.fromResponseToEntity(product);
-
-        List<ProductLargeQuantityPriceEntity> prices = priceLargeQuantityRepository.findByProduct(p);
-
-        if (prices.isEmpty()) {
-            return List.of();
+        ProductResponseDto productDto = productService.getProductById(productId);
+        if (productDto == null) {
+            throw new ProductNotFoundException(productId);
         }
 
+        ProductEntity product = productMapper.fromResponseToEntity(productDto);
+        List<ProductLargeQuantityPriceEntity> prices = priceLargeQuantityRepository.findByProduct(product);
+
+        if (prices.isEmpty())
+            return Collections.emptyList();
+
         return prices.stream()
-                .map(ProductLargeQuantityPriceMapper::toResponseDto)
-                .toList();
+                .map(productLargeQuantityPriceMapper::toResponseDto)
+                .collect(Collectors.toList());
     }
 
     @Override
     public ProductLargeQuantityPriceResponseDto updateProductPriceLargeQuantity(
             Long productId,
             Long priceId,
-            ProductLargeQuantityPriceRequestDto productPriceLargeQuantityRequestDto) {
+            ProductLargeQuantityPriceRequestDto requestDto) {
 
-        ProductLargeQuantityPriceEntity existingPrice = priceLargeQuantityRepository
+        ProductLargeQuantityPriceEntity existing = priceLargeQuantityRepository
                 .findByIdAndProductId(priceId, productId);
 
-        existingPrice.setQuantity(productPriceLargeQuantityRequestDto.getQuantity());
-        existingPrice.setPrice(productPriceLargeQuantityRequestDto.getPrice());
+        if (existing == null) {
+            throw new ProductNotFoundException(priceId);
+        }
 
-        ProductLargeQuantityPriceEntity savedPrice = priceLargeQuantityRepository.save(existingPrice);
+        existing.setQuantity(requestDto.getQuantity());
+        existing.setPrice(requestDto.getPrice());
 
-        return ProductLargeQuantityPriceMapper.toResponseDto(savedPrice);
+        ProductLargeQuantityPriceEntity saved = priceLargeQuantityRepository.save(existing);
+
+        return productLargeQuantityPriceMapper.toResponseDto(saved);
     }
 
     @Override
     public String deleteProductPriceLargeQuantity(Long priceId) {
-
-        ProductLargeQuantityPriceEntity existingPrice = priceLargeQuantityRepository
-                .findById(priceId)
+        ProductLargeQuantityPriceEntity entity = priceLargeQuantityRepository.findById(priceId)
                 .orElseThrow(() -> new ProductNotFoundException(priceId));
 
-        priceLargeQuantityRepository.delete(existingPrice);
-
-        return "Product price large quantity with ID " + priceId
-                + " deleted successfully.";
+        priceLargeQuantityRepository.delete(entity);
+        return "Product price large quantity with ID " + priceId + " deleted successfully.";
     }
-
 }
